-
Bug
-
Resolution: Done
-
Not Evaluated
-
5.14.2
-
None
-
-
5ac442521c252c6294a04de012243436e3ce2411 (qt/qttools/dev) 48d9fa040ed0ddcb969a42f49c7ec91149daf9dc (qt/qttools/5.15)
I'm having issues with qt designer. Since I changed my graphics card I get everything scaled up in qt designer, and I can't see any way to change that. Is there a way to switch off dpi scaling in qt designer?
I have some information here, but it doesn't seem to work and it's not affecting qt designer in any way it seems. Any suggestions are appreciated.
For Gerrit Dashboard: QTBUG-83858 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
298494,2 | Qt Designer: Add command line option for AA_DisableHighDpiScaling | 5.15 | qt/qttools | Status: MERGED | +2 | 0 |
298741,5 | Qt Designer: Add command line option for AA_DisableHighDpiScaling | dev | qt/qttools | Status: MERGED | +2 | 0 |