Qt Designer: Add command line option for AA_DisableHighDpiScaling

Fixes: QTBUG-83858
Change-Id: Ib0663aa7c98c8f0ae47907f87665c564e5b96186
Reviewed-by: Jarek Kobus <jaroslaw.kobus@qt.io>
(cherry picked from commit 5ac442521c252c6294a04de012243436e3ce2411)
Reviewed-by: cherrypickbot